--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,7 @@
     font-family: 'Noto Sans KR', sans-serif;} */
 
 .row { max-width:1800px; margin:0 auto}
+.row2 { max-width:1600px; margin:0 auto}
 .topNavWrap {
     width:100%; 
     font-family: 'Montserrat', sans-serif;
