--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,11 @@
 .main-slide-wrap .main-slide-overlay {
     width:100%; height:800px;  overflow: hidden;
     position: relative;
+    
 }
 .main-slide-wrap video {
     width:100%; opacity:0.7;
+    margin-top:85px; 
 }
 .main-slide-wrap .video-txt {
     font-family: 'Montserrat', sans-serif;
@@ -15,7 +17,7 @@
     width:70%;
     position: absolute; top:55%; left:50%;
     transform: translate(-50%,-50%);
-    z-index:999999;
+    z-index:999999; 
 }
 
 /* article1 */
@@ -76,7 +78,7 @@
 /* article2 */
 .article2 {  width:100%;
     display:grid; grid-template-columns: 25% 25% 25% 25% ;
-    font-size:30px;
+    font-size:30px;  
 }
 .article2 > div { height:400px; font-family: 'Montserrat', sans-serif;}
 .article2 > .box1 { grid-area: 1/1/3/3; background:#333;
@@ -94,7 +96,7 @@
     background-position:center;
     height:700px;
     font-weight:700; font-size:60px; color:#fff;
-    text-align: center;
+    text-align: center; 
 }
 .article2 .box-icon {
     position: relative; top:50%; left:50%;
@@ -130,7 +132,7 @@
 .article2 .box6 p {
     position: relative; top:45%; left:0;
     transform:translateY(-50%);
-    font-size:70px
+    font-size:70px; 
 }
 .article2 .box6 a { position: relative; top:40%; left:0;
     transform:translateY(-50%);
@@ -138,7 +140,7 @@
     background:#eee; color:#333;
     font-weight: normal;
     border-radius: 10px;
-    transition:all 0.3s
+    transition:all 0.3s; 
  }
  .article2 .box6 a:hover { background:#32b67a; color:#fff;}
 
@@ -167,16 +169,16 @@
     font-weight: 300;
     padding:15px 0
 }
-.addr-txt h2 { font-size:23px;
+.addr-txt h2 { font-size:23px; display:inline-block;
     font-family: 'Noto Sans KR', sans-serif;
     font-weight:700;
-    padding:15px 0 
+    padding:15px 0 ; background:red; 
 }
 .addr-addr i { position:relative; top:30%; left:86%;
     font-size:90px; color:#444;
 }
 .addr-tel-wrap i { position: relative; top:40%; left:80%;
-    font-size:50px;
+    font-size:50px; background:yellow;
 }
 .addr-tel-wrap a:hover { text-decoration: underline;
     text-underline-position: under;
@@ -187,6 +189,6 @@
     padding:40px 0;
     text-align:center;
 }
-.footer-info { font-size:14px; color:#aaa;}
+.footer-info { font-size:14px; color:#aaa; }
 .footer-info span { color:#32b67a}
 
