--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 /* 메인 슬라이드 비디오 구역 */
 .main-slide-wrap .main-slide-overlay {
     width:100%; height:800px;  overflow: hidden;
@@ -154,7 +153,7 @@
     opacity: 0.6;
 }
 
-.addr-wrap { display:flex; width:100%; }
+.addr-wrap { display:flex;  }
 .addr-wrap > div { width:50%; height:700px }
 .addr-map iframe { width:100%; height:700px }
 .addr-info { display:flex; flex-direction: column;}
@@ -162,23 +161,27 @@
 .addr-tel-wrap { display:flex; }
 .addr-tel-wrap > div { width:50%;  }
 
-.addr-txt { position: relative; top:50%; left:50px; 
- transform: translateY(-50%);}
+.addr-txt {
+     position: relative; top:50%; left:0px; 
+ transform: translateY(-50%); padding-left:40px;
+}
 .addr-txt p { font-size:18px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     padding:15px 0
 }
-.addr-txt h2 { font-size:23px; display:inline-block;
+.addr-txt h2 { font-size:23px; 
     font-family: 'Noto Sans KR', sans-serif;
     font-weight:700;
-    padding:15px 0 ; background:red; 
+    padding:15px 0 ;
 }
-.addr-addr i { position:relative; top:30%; left:86%;
+.addr-addr i { 
+    position:relative; top:30%; left:86%;
     font-size:90px; color:#444;
 }
-.addr-tel-wrap i { position: relative; top:40%; left:80%;
-    font-size:50px; background:yellow;
+.addr-tel-wrap i { 
+    position: relative; top:40%; left:80%;
+    font-size:50px; 
 }
 .addr-tel-wrap a:hover { text-decoration: underline;
     text-underline-position: under;
