--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,8 @@
 
 .row { max-width:1800px; margin:0 auto}
 .row2 { max-width:1600px; margin:0 auto}
+.row3 { max-width:1200px; margin:0 auto}
+
 .topNavWrap {
     width:100%; 
     font-family: 'Montserrat', sans-serif;
