--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -46,7 +46,7 @@
 .pf-txt p { font-size:17px; color:#555;}
 .pf-txt p+p { padding-top:10px;}
 .pf-txt p:last-child { line-height:1.7; }
-
+.pf-txt a { text-decoration: underline; }
 .color { display:flex; padding:10px 0 }
 .color div:nth-child(1) { font-size:17px; color:#555;
     margin-right:9px;
