--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -13,11 +13,14 @@
 .pf-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.6;
 }
-
-.pf-list-section { padding:100px 0 ; display:flex; flex-wrap:wrap;
+.pf-wrap > p { text-align: center;
+    color:#ccc; padding-top:65px;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+.pf-list-section { padding:50px 0 100px; display:flex; flex-wrap:wrap;
     justify-content: center;
 }
-.pf-list-section > div { width: 40%; margin:5%;}
+.pf-list-section > div { width: 42%; margin:3%;}
 .pf-list-section img { border-radius:15px; border:2px solid #ddd}
 
 .pf-overlay-wrap { position: relative;  }
@@ -46,7 +49,12 @@
 .pf-txt p { font-size:17px; color:#555;}
 .pf-txt p+p { padding-top:10px;}
 .pf-txt p:last-child { line-height:1.7; }
+.pf-txt p:last-child span { font-size: 16px; 
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 400 ;
+}
 .pf-txt a { text-decoration: underline; }
+
 .color { display:flex; padding:10px 0 }
 .color div:nth-child(1) { font-size:17px; color:#555;
     margin-right:9px;
