--- a/css/contact.css
+++ b/css/contact.css
@@ -14,3 +14,25 @@
 .contact-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.5;
 }
+
+.contact-wrap { padding:100px 0 }
+.contact-wrap table { width:800px; margin:0 auto;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+.contact-wrap table tr { border-bottom:1px solid #bbb;
+}
+.contact-wrap table tr:first-child { border-top:1px solid #bbb}
+.contact-wrap table tr td { padding:20px 0 ;}
+.contact-wrap table tr td:first-child {width:25%; text-align:center;
+    font-size:18px;
+}
+.contact-wrap table tr td:last-child { width:75%; }
+.contact-wrap input { height:45px; border:1px solid #ccc;
+    text-indent:0.7em
+}
+.contact-name { width:500px; }
+.contact-tel { width:150px }
+table span { padding:0 5px; color:#333}
+.contact-email { width:500px; }
+#contact-query { width:500px; height:250px; }
+#contact-photo { border:none; vertical-align:bottom;}
