--- a/css/skills.css
+++ b/css/skills.css
@@ -13,3 +13,34 @@
 .skills-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.3;
 }
+
+.skills-row { background:#eee }
+.skills-row2 { background:#fff; }
+.skills-wrap { 
+    display:flex; flex-wrap: wrap;
+    justify-content: center;
+    padding:100px 0;
+
+}
+.skills-wrap .pie-chart { width:250px; height:250px; 
+    margin:50px;
+    border-radius: 50%;
+    transition: all 0.5s;
+    position: relative;
+    
+}
+.pie-chart span.center { position:absolute; top:50%; left:50%;
+    transform:translate(-50%,-50%);
+    display:block;
+    width:150px; height:150px; 
+    border-radius: 50%;
+    font-size:26px;
+    background:#fff;
+    text-align: center; line-height: 150px;
+    font-family: 'Roboto', sans-serif;
+    
+
+}
+.center p:last-child { padding-top:15px; font-weight: 500;}
+
+
