--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,7 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Noto Sans KR', sans-serif;} */
 
+#container { min-height:1000px; }
 .row { max-width:1800px; margin:0 auto}
 .row2 { max-width:1600px; margin:0 auto}
 .row3 { max-width:1200px; margin:0 auto}
