--- a/css/contact.css
+++ b/css/contact.css
@@ -15,19 +15,21 @@
     background:#fff; opacity: 0.5;
 }
 
-.contact-wrap { padding:100px 0 }
-.contact-wrap table { width:800px; margin:0 auto;
+.contact-row { background:#eee }
+.contact { background:#fff}
+.contact { padding:100px 0 }
+.contact table { width:800px; margin:0 auto;
     font-family: 'Noto Sans KR', sans-serif;
 }
-.contact-wrap table tr { border-bottom:1px solid #bbb;
+.contact table tr { border-bottom:1px solid #bbb;
 }
-.contact-wrap table tr:first-child { border-top:1px solid #bbb}
-.contact-wrap table tr td { padding:20px 0 ;}
-.contact-wrap table tr td:first-child {width:25%; text-align:center;
+.contact table tr:first-child { border-top:1px solid #bbb}
+.contact table tr td { padding:20px 0 ;}
+.contact table tr td:first-child {width:25%; text-align:center;
     font-size:18px;
 }
-.contact-wrap table tr td:last-child { width:75%; }
-.contact-wrap input { height:45px; border:1px solid #ccc;
+.contact table tr td:last-child { width:75%; }
+.contact input { height:45px; border:1px solid #ccc;
     text-indent:0.7em
 }
 .contact-name { width:500px; }
@@ -35,4 +37,18 @@
 table span { padding:0 5px; color:#333}
 .contact-email { width:500px; }
 #contact-query { width:500px; height:250px; }
-#contact-photo { border:none; vertical-align:bottom;}
+#contact-photo { border:none; padding-top:11px;}
+
+.contact-btn { text-align:center; padding:30px 0;
+}
+.contact-btn button { background:none; border:none;}
+.contact-btn button a{ padding:12px 25px;
+    border-radius:5px; 
+    background:#32b67a; color:#fff;
+    font-size:14px;
+    margin:0 3px; 
+    transition: all 0.3s;
+}
+.contact-btn button:hover a{ background:#fff; color:#32b67a;
+    border:1px solid #32b67a;
+}
