--- a/css/join.css
+++ b/css/join.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.joinContent { padding-top:85px;}
+.joinContent { padding-top:85px; font-family: 'Noto Sans KR', sans-serif;}
 
 .join-topbg { background:url(../images/mypage_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
@@ -13,3 +13,49 @@
 .join-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.2;
 }
+
+.join-row { background:#32b67a; }
+.join-wrap { background:#fff;
+    padding:100px 0 ;
+}
+
+.join-form { width:700px; margin:0 auto;
+    padding:50px; border:1px solid #ddd; 
+}
+.join-form h2 { font-size:30px;
+    padding:1px ; margin:5px 15px 30px; 
+    border-bottom:2px solid #32b67a;
+    display:inline-block;
+}
+
+.join-form table { padding:25px 0;  }
+.join-form table tr td:first-child { width:20%;
+}
+.join-form table tr td:nth-child(2) { width:70% }
+.join-form table tr td:last-child { width:10%;}
+.join-form table input { width:90%; height:50px;
+    border:1px solid #ddd;
+    background:#f6f6f6;
+    margin:8px auto;
+    text-indent:0.7em; 
+}
+.join-form table button.idcheck {
+    width:100px; height:49px; 
+    margin-left:-30px;
+    background:#32b67a; color:#fff;
+}
+.join-form ::placeholder { font-size:13px; }
+
+.join-btn { text-align: center; }
+.join-btn button { background:#32b67a; color:#fff;
+    width:200px; height:50px; 
+    font-size:15px; font-weight: 400;
+    transition:all 0.3s;
+    cursor: pointer;
+    margin:
+    30px 0 10px;
+}
+.join-btn button:hover { background:#fff; color:#32b67a;
+    border : 1px solid #32b67a;
+}
+
