--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-.loginContent { padding-top:85px;}
+.loginContent { padding-top:85px; font-family: 'Noto Sans KR', sans-serif;}
 
 .login-topbg { background:url(../images/mypage_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
@@ -14,3 +14,47 @@
 .login-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.2;
 }
+
+.login-row { background:#32b67a; }
+.login-wrap { background:#fff;
+    padding:100px 0 ;
+}
+
+.login-form { width:600px; margin:0 auto;
+    padding:50px; border:1px solid #ddd; 
+}
+.login-form h2 { font-size:30px;
+    padding:1px ; margin:5px 15px 30px; 
+    border-bottom:2px solid #32b67a;
+    display:inline-block;
+}
+
+.login-form input { display:block; border:1px solid #ddd;
+    width:95%; height:50px;
+    background:#f6f6f6;
+    margin:10px auto;
+    text-indent:0.7em; 
+}
+.login-form ::placeholder { font-size:14px; }
+
+.login-btn { text-align: center; }
+.login-btn button { background:#32b67a; color:#fff;
+    width:95%; height:50px; 
+    font-size:15px; font-weight: 400;
+    transition:all 0.3s;
+    cursor: pointer;
+}
+.login-btn button:hover { background:#fff; color:#32b67a;
+    border : 1px solid #32b67a;
+}
+
+.find-idpw { text-align:center; padding:25px 0 10px;
+    font-weight:300; color:#777;
+    font-size:15px; 
+}
+.find-idpw span:before { content:'|'; padding:0 10px; 
+    position:relative; top:50%;  
+    transform: translateY(-50%);
+    color:#999;
+}
+.find-idpw span:first-child:before { display:none;}
