--- a/css/common.css
+++ b/css/common.css
@@ -34,3 +34,5 @@
 .topNav ul li:hover a { color:#32b67a;}
 .navBar ul li { display:inline-block; }
 .loginMenu ul li{ display:inline-block}
+
+.topNav ul li.on a { color:#32b67a}
