--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,14 @@
     margin-top:85px; 
 }
 .main-slide-wrap .video-txt {
-    font-family: 'Montserrat', sans-serif;
-    font-size:70px; color:#fff;
-    font-weight: 900;
+    font-size:75px; color:#fff;
+    font-weight: bold;
     width:70%;
     position: absolute; top:55%; left:50%;
     transform: translate(-50%,-50%);
-    z-index:999999; 
+    z-index:999999;font-family: 'Michroma', sans-serif;
 }
+.main-slide-wrap .video-txt p {padding:5px 0 }
 
 /* article1 */
 .article1 { display: grid; grid-template-columns: 50% 50%;
