--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
     margin-top:85px; 
 }
 .main-slide-wrap .video-txt {
-    font-size:75px; color:#fff;
+    font-size:72px; color:#fff;
     font-weight: bold;
     width:70%;
     position: absolute; top:55%; left:50%;
@@ -18,7 +18,11 @@
     z-index:999999;font-family: 'Michroma', sans-serif;
 }
 .main-slide-wrap .video-txt p {padding:5px 0 }
+.main-slide-wrap .video-txt p:first-child { color:#666; font-size:70px;
+    margin-left:20px;
+}
 
+.main-slide-wrap.on p:first-child { animation: bounce 1.1s infinite 0s;}
 /* article1 */
 .article1 { display: grid; grid-template-columns: 50% 50%;
     min-height:700px; 
@@ -58,12 +62,16 @@
 .article1-img{ background: url(../images/img01.png) no-repeat;
     background-size:cover;
     background-position:center;
+    display:none;
 }
 .article1-img a { position: relative; top:50%; left:50%;
     transform: translate(-50%,-50%);
 }
 .article1-img a:hover i { color:red; }
 .article1-img i { font-size:70px; color:#32b67a}
+.article1-img.on { display:block; animation:fadeInUp 1.5s both 0s; }
+
+
 .video-outer { position:fixed; top:0; left:0; right:0; bottom:0;
     background:rgba(0,0,0,0.6);
     z-index:999999999999; display:none;
@@ -143,8 +151,16 @@
  }
  .article2 .box6 a:hover { background:#32b67a; color:#fff;}
 
+ .article2.on .box1 { animation:fadeInUp 1.5s both 0s }
+ .article2.on .box2 { animation:fadeInUp 1.5s both 0.5s }
+ .article2.on .box3 { animation:fadeInUp 1.5s both 0.9s }
+ .article2.on .box4 { animation:fadeInUp 1.5s both 1.2s }
+ .article2.on .box5 { animation:fadeInUp 1.5s both 1.5s }
+ .article2.on .box6 { animation:fadeInUp 1.5s both 1.8s }
+
 /* article3 */
 /*백그라운드 컬러*/
+
 .addr-addr { background:#fff; color:#000; }
 .addr-tel { background:#32b57a; color:#fff; }
 .addr-mail { background:url(../images/img06.png) no-repeat;
@@ -186,7 +202,10 @@
 .addr-tel-wrap a:hover { text-decoration: underline;
     text-underline-position: under;
 }
-
+.article3.on .addr-map { animation:fadeInLeft 1.5s both 0.5s}
+.article3.on .addr-addr { animation:fadeInRight 1.5s both 1s}
+.article3.on .addr-tel { animation:fadeInRight 1.5s both 1.5s}
+.article3.on .addr-mail { animation:fadeInRight 1.5s both 2s}
 /* footer */
 #footer { background:#122947;
     padding:40px 0;
