--- a/css/board.css
+++ b/css/board.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.boardContent { padding-top:85px;}
+.boardContent { padding-top:85px; }
 .board-topbg { background:url(../images/board_top_bg.png) no-repeat;
     background-size:cover; background-position:center;
     height:500px; position: relative;
@@ -12,3 +12,40 @@
 .board-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.3;
 }
+
+
+.board-table { padding:80px 0; font-family: 'Noto Sans KR', sans-serif;}
+.board-table colgroup col:nth-child(1) { width: 10%}
+.board-table colgroup col:nth-child(2) { width: auto; text-align:left }
+.board-table colgroup col:nth-child(3) { width: 15%}
+.board-table thead { 
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    background:#f7f7f7;
+}
+.board-table thead th { padding:20px 0 ; 
+    text-align:center; color:#666;
+    font-weight: bold;
+}
+.board-table tbody td { padding:28px 0 ;
+    border-bottom:1px solid #ddd;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-weight: 300;
+}
+.board-table tbody td:nth-child(1),
+.board-table tbody td:nth-child(3) { text-align: center;}
+.board-table tbody td:nth-child(2) { cursor: pointer; }
+.board-table tbody td:nth-child(2):hover { text-decoration: underline;}
+
+.write { text-align:right }
+.write button { padding:7px 12px; margin-top:15px;
+    background:#32b67a; color:#fff;
+    border-radius: 5px;
+}
+
+.board-num { text-align:center;}
+.board-num span { padding:0 20px; cursor:pointer}
+.board-num a { padding:0 10px }
+.board-num a.on { color:#32b67a; font-weight: bold;}
