--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-.contactContent { padding-top:85px; background:#eee}
+.contactContent { padding-top:85px;}
 
 .contact-topbg { background:url(../images/contact_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
@@ -14,8 +14,6 @@
 .contact-bg-overlay { position: absolute; width:100%; height:500px;
     background:#fff; opacity: 0.5;
 }
-
-.contact { background:#fff}
 .contact { padding:100px 0 }
 .contact table { width:800px; margin:0 auto;
     font-family: 'Noto Sans KR', sans-serif;
