--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 .main-slide-wrap video {
     width:100%; opacity:0.7;
     margin-top:85px; 
+    position:bottom;
 }
 .main-slide-wrap .video-txt {
     font-size:72px; color:#fff;
