--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,16 @@
 @charset "utf-8";
 /* 메인 슬라이드 비디오 구역 */
 .main-slide-wrap .main-slide-overlay {
-    width:100%; height:800px;  overflow: hidden;
+    width:100%; height:50vw;  overflow: hidden;
     position: relative;
     
 }
 .main-slide-wrap video {
     width:100%; opacity:0.7;
     margin-top:85px; 
-    position:bottom;
 }
 .main-slide-wrap .video-txt {
-    font-size:72px; color:#fff;
+    font-size:77px; color:#fff;
     font-weight: bold;
     width:70%;
     position: absolute; top:55%; left:50%;
@@ -19,11 +18,11 @@
     z-index:999999;font-family: 'Michroma', sans-serif;
 }
 .main-slide-wrap .video-txt p {padding:5px 0 }
-.main-slide-wrap .video-txt p:first-child { color:#666; font-size:70px;
+.main-slide-wrap .video-txt p:first-child { color:#666; font-size:75px;
     margin-left:20px;
 }
-
 .main-slide-wrap.on p:first-child { animation: bounce 1.1s infinite 0s;}
+
 /* article1 */
 .article1 { display: grid; grid-template-columns: 50% 50%;
     min-height:700px; 
@@ -160,14 +159,13 @@
  .article2.on .box6 { animation:fadeInUp 1.5s both 1.8s }
 
 /* article3 */
-/*백그라운드 컬러*/
-
-.addr-addr { background:#fff; color:#000; }
-.addr-tel { background:#32b57a; color:#fff; }
+.addr-addr { background:#fff; color:#000; position: relative; }
+.addr-tel { background:#32b57a; color:#fff; position: relative; }
 .addr-mail { background:url(../images/img06.png) no-repeat;
     background-size:cover;
     background-position:center;
     opacity: 0.6;
+    position: relative;
 }
 
 .addr-wrap { display:flex;  }
@@ -193,11 +191,16 @@
     padding:15px 0 ;
 }
 .addr-addr i { 
-    position:relative; top:30%; left:86%;
+    position:absolute; bottom:20px; right:50px;
+    transform: translateY(-50%);
     font-size:90px; color:#444;
 }
-.addr-tel-wrap i { 
-    position: relative; top:40%; left:80%;
+.addr-tel i { 
+    position: absolute; bottom:30px; right:50px;
+    font-size:50px; 
+}
+.addr-mail i { 
+    position: absolute; bottom:25px; right:50px;
     font-size:50px; 
 }
 .addr-tel-wrap a:hover { text-decoration: underline;
