--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,9 @@
 @import url("join.css");
 @import url("rwdcommon.css");
 @import url("rwdindex.css");
+@import url("rwdportfolio.css");
+@import url("rwdskills.css");
+@import url("rwdboard.css");
+@import url("rwdcontact.css");
+@import url("rwdlogin.css");
+@import url("rwdjoin.css");
