--- a/css/about.css
+++ b/css/about.css
@@ -4,13 +4,13 @@
 
 .about-topbg { background:url(../images/about_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
-    height:500px; position: relative;
+    height:30vw; position: relative;
 }
 .about-topbg h2 { font-size:60px; z-index:9999; color:#000;
     position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
     font-family: 'Montserrat', sans-serif;
 }
-.about-bg-overlay { position: absolute; width:100%; height:500px;
+.about-bg-overlay { position: absolute; width:100%; height:30vw;
     background:#fff; opacity: 0.5;
 }
 
