--- a/css/contact.css
+++ b/css/contact.css
@@ -3,19 +3,22 @@
 
 .contactContent { padding-top:85px;}
 
+/* 컨택트 백그라운드 */
 .contact-topbg { background:url(../images/contact_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
-    height:500px; position: relative;
+    height:30vw; position: relative;
 }
 .contact-topbg h2 { font-size:60px; z-index:9999; color:#000;
     position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
     font-family: 'Montserrat', sans-serif;
 }
-.contact-bg-overlay { position: absolute; width:100%; height:500px;
+.contact-bg-overlay { position: absolute; width:100%; height:30vw;
     background:#fff; opacity: 0.5;
 }
+
+/* 컨택트 폼 박스 */
 .contact { padding:100px 0 }
-.contact table { width:800px; margin:0 auto;
+.contact table { width:50%; margin:0 auto;
     font-family: 'Noto Sans KR', sans-serif;
 }
 .contact table tr { border-bottom:1px solid #bbb;
@@ -29,11 +32,11 @@
 .contact input { height:45px; border:1px solid #ccc;
     text-indent:0.7em
 }
-.contact-name { width:500px; }
-.contact-tel { width:150px }
+.contact-name { width:95%px; }
+.contact-tel { width:100px }
 table span { padding:0 5px; color:#333}
-.contact-email { width:500px; }
-#contact-query { width:500px; height:250px; }
+.contact-email { width:95%; }
+#contact-query { width:95%; height:250px; }
 #contact-photo { border:none; padding-top:11px;}
 
 .contact-btn { text-align:center; padding:30px 0;
