--- a/css/join.css
+++ b/css/join.css
@@ -3,16 +3,16 @@
 .joinContent { padding-top:85px; font-family: 'Noto Sans KR', sans-serif;
     background:#32b67a;
 }
-
+/*조인 백그라운드*/
 .join-topbg { background:url(../images/mypage_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
-    height:500px; position: relative;
+    height:30vw; position: relative;
 }
 .join-topbg h2 { font-size:60px; z-index:9999; color:#000;
     position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
     font-family: 'Montserrat', sans-serif;
 }
-.join-bg-overlay { position: absolute; width:100%; height:500px;
+.join-bg-overlay { position: absolute; width:100%; height:30vw;
     background:#fff; opacity: 0.2;
 }
 
@@ -20,6 +20,7 @@
     padding:100px 0 ;
 }
 
+/* 조인 폼박스 */
 .join-form { width:700px; margin:0 auto;
     padding:50px; border:1px solid #ddd; 
 }
@@ -30,22 +31,22 @@
 }
 
 .join-form table { padding:25px 0;  }
-.join-form table tr td:first-child { width:20%;
-}
-.join-form table tr td:nth-child(2) { width:70% }
-.join-form table tr td:last-child { width:10%;}
+.join-form table tr td:first-child { width:20%; font-size:18px; }
+.join-form table tr td:last-child { width:80%;}
 .join-form table input { width:90%; height:50px;
     border:1px solid #ddd;
     background:#f6f6f6;
     margin:8px auto;
     text-indent:0.7em; 
 }
+.join-form table tr:first-child td:last-child input{ width:60%; display:inline-block}
 .join-form table button.idcheck {
-    width:100px; height:49px; 
-    margin-left:-30px;
+    width:110px; height:50px; 
+    margin-left:5px;
     background:#32b67a; color:#fff;
+    vertical-align: middle;
 }
-.join-form ::placeholder { font-size:13px; }
+.join-form ::placeholder { font-size:15px; }
 
 .join-btn { text-align: center; }
 .join-btn button { background:#32b67a; color:#fff;
