--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,24 +2,28 @@
 
 .portfolioContent { padding-top:85px; font-family: 'Roboto', sans-serif;}
 
+/* 포폴 백그라운드 */
 .pf-topbg { background:url(../images/portfolio_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
-    height:500px; position: relative;
+    height:30vw; position: relative;
 }
 .pf-topbg h2 { font-size:60px; z-index:9999; color:#000;
     position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
     font-family: 'Montserrat', sans-serif;
 }
-.pf-bg-overlay { position: absolute; width:100%; height:500px;
+.pf-bg-overlay { position: absolute; width:100%; height:30vw;
     background:#fff; opacity: 0.6;
 }
 
+/* 이동 설명 글 */
 .pf-wrap { background:#eee }
 .pf { background:#fff; }
 .pf > p { text-align: center;
     color:#aaa; padding-top:65px;
     font-family: 'Noto Sans KR', sans-serif;
 }
+
+/* 포폴 이미지, 설명 리스트 */
 .pf-list-section { padding:50px 0 100px; display:flex; flex-wrap:wrap;
     justify-content: center;
 }
@@ -60,14 +64,6 @@
 }
 .pf-txt a { text-decoration: underline; }
 
-.color { display:flex; padding:10px 0 }
-.color div:nth-child(1) { font-size:17px; color:#555;
-    margin-right:9px;
-}
-.color div:nth-child(2), .color div:nth-child(3), .color div:nth-child(4) { 
-    width:20px; height:20px;
-    margin-right:9px; border:1.5px solid #000;
-}
 .color01 div:nth-child(2) { background:#32b67a}
 .color01 div:nth-child(3) { background:#122947}
 .color01 div:nth-child(4) { background:#ddd}
