--- a/css/skills.css
+++ b/css/skills.css
@@ -2,18 +2,20 @@
 
 .skillsContent { padding-top:85px; background:#eee;}
 
+/* 스킬 백그라운드 */
 .skills-topbg { background:url(../images/skills_top_bg.png) no-repeat;
     background-size:cover; background-position: center;
-    height:500px; position: relative;
+    height:30vw; position: relative;
 }
 .skills-topbg h2 { font-size:60px; z-index:9999; color:#000;
     position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
     font-family: 'Montserrat', sans-serif;
 }
-.skills-bg-overlay { position: absolute; width:100%; height:500px;
+.skills-bg-overlay { position: absolute; width:100%; height:30vw;
     background:#fff; opacity: 0.3;
 }
 
+/* 스킬 도넛 차트 */
 .skills-row2 { background:#fff; }
 .skills-wrap { 
     display:flex; flex-wrap: wrap;
