--- a/css/main.css
+++ b/css/main.css
@@ -66,9 +66,12 @@
 }
 .article1-img a { position: relative; top:50%; left:50%;
     transform: translate(-50%,-50%);
+    
 }
-.article1-img a:hover i { color:red; }
-.article1-img i { font-size:70px; color:#32b67a}
+.article1-img a:hover i { color:#fff; }
+.article1-img i { font-size:78px; color:#32b67a;
+    transition: all 0.3s;
+}
 .article1-img.on { display:block; animation:fadeInUp 1.5s both 0s; }
 
 
@@ -77,6 +80,9 @@
     z-index:999999999999; display:none;
 }
 .video-inner { position:fixed; top:20%; left:20%; right:20%; bottom:20%;
+    background:#121738
+}
+.video-inner video { width:100%; height:60vh;
 }
 .video-close { position: absolute; top:-30px; right:-45px;
     color:#fff; font-size:45px;
