--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 @import url("join.css");
 @import url("rwdcommon.css");
 @import url("rwdindex.css");
+@import url("rwdabout.css");
 @import url("rwdportfolio.css");
 @import url("rwdskills.css");
 @import url("rwdboard.css");
