--- a/css/rwdboard.css
+++ b/css/rwdboard.css
@@ -1,1 +1,146 @@
 @charset "utf-8";
+
+@media screen and (max-width:1200px) {
+
+    /* 보드 백그라운드*/
+    .board-topbg h2 { font-size: 53px; z-index:9999; color:#000;
+        position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    /* 보드 테이블 박스 */
+   .board-table { padding:80px 0; font-family: 'Noto Sans KR', sans-serif;
+    width:90%;
+}
+   .board-table colgroup col:nth-child(1) { width: 10%}
+   .board-table colgroup col:nth-child(2) { width: auto; text-align:left }
+   .board-table colgroup col:nth-child(3) { width: 15%}
+   .board-table thead { 
+       border-top: 1px solid #ddd;
+       border-bottom: 1px solid #ddd;
+       background:#f7f7f7;
+   }
+   .board-table thead th { padding:20px 0 ; 
+       text-align:center; color:#666;
+       font-weight: bold;
+   }
+   .board-table tbody td { padding:28px 0 ;
+       border-bottom:1px solid #ddd;
+       white-space: nowrap;
+       text-overflow: ellipsis;
+       overflow: hidden;
+       font-weight: 300;
+   }
+   .board-table tbody td:nth-child(1),
+   .board-table tbody td:nth-child(3) { text-align: center;}
+   .board-table tbody td:nth-child(2) { cursor: pointer; }
+   .board-table tbody td:nth-child(2):hover { text-decoration: underline;}
+   
+   .write { text-align:right }
+   .write button { padding:7px 12px; margin-top:15px;
+       background:#32b67a; color:#fff;
+       border-radius: 5px;
+   }
+   
+   .board-num { text-align:center;}
+   .board-num span { padding:0 20px; cursor:pointer}
+   .board-num a { padding:0 10px }
+   .board-num a.on { color:#32b67a; font-weight: bold;}
+}
+
+@media screen and (max-width:768px) {
+    /* 보드 백그라운드 */
+    .board-topbg { background:url(../images/board_top_bg.png) no-repeat;
+        background-size:cover; background-position:center;
+        height:40vw; position: relative;
+    }
+    .board-topbg h2 { font-size:41px; z-index:9999; color:#000;
+        position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
+        font-family: 'Montserrat', sans-serif;
+    }
+    .board-bg-overlay { position: absolute; width:100%; height:40vw;
+        background:#fff; opacity: 0.3;
+    }
+    /* 보드 테이블 박스 */
+    .board-table { padding:60px 0; font-family: 'Noto Sans KR', sans-serif;
+        width:90%
+    }
+    .board-table colgroup col:nth-child(1) { width: 10%}
+   .board-table colgroup col:nth-child(2) { width: auto; text-align:left }
+   .board-table colgroup col:nth-child(3) { width: 15%}
+   .board-table thead { 
+       border-top: 1px solid #ddd;
+       border-bottom: 1px solid #ddd;
+       background:#f7f7f7;
+       font-size:15px;
+   }
+   .board-table thead th { padding:20px 0 ; 
+       text-align:center; color:#666;
+       font-weight: bold;
+   }
+   .board-table tbody td { padding:28px 0 ;
+       border-bottom:1px solid #ddd;
+       white-space: nowrap;
+       text-overflow: ellipsis;
+       overflow: hidden;
+       font-weight: 300;
+       font-size:15px;
+   }
+   .board-table tbody td:nth-child(1),
+   .board-table tbody td:nth-child(3) { text-align: center;}
+   .board-table tbody td:nth-child(2) { cursor: pointer; }
+   .board-table tbody td:nth-child(2):hover { text-decoration: underline;}
+   
+   .write { text-align:right }
+   .write button { padding:7px 12px; margin-top:15px;
+       background:#32b67a; color:#fff;
+       border-radius: 5px;
+   }
+   .board-num { text-align:center; font-size:14px;}
+}
+
+@media screen and (max-width:500px) {
+    /* 보드 백그라운드 */
+    .board-topbg h2 { font-size:26px; z-index:9999; color:#000;
+        position: absolute; top:50%; left:50%; transform: translate(-50%,-50%);
+        font-family: 'Montserrat', sans-serif;
+    }
+     /* 보드 테이블 박스 */
+    .board-table { padding:60px 0; font-family: 'Noto Sans KR', sans-serif;
+        width:90%
+    }
+    .board-table colgroup col:nth-child(1) { width: 15%}
+    .board-table colgroup col:nth-child(2) { width: auto; text-align:left }
+    .board-table colgroup col:nth-child(3) { width: 30%}
+    .board-table thead { 
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        background:#f7f7f7;
+        font-size:14px;
+    }
+    .board-table thead th { padding:20px 0 ; 
+        text-align:center; color:#666;
+        font-weight: bold;
+    }
+    .board-table tbody td { padding:28px 0 ;
+        border-bottom:1px solid #ddd;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        font-weight: 300;
+        font-size:13px;
+    }
+    .board-table tbody td:nth-child(1),
+    .board-table tbody td:nth-child(3) { text-align: center;}
+    .board-table tbody td:nth-child(2) { cursor: pointer; }
+    .board-table tbody td:nth-child(2):hover { text-decoration: underline;}
+    
+    .write { text-align:right}
+    .write button { padding:5px 10px; margin-top:15px;
+        background:#32b67a; color:#fff;
+        border-radius: 5px; font-size:12px;
+    }
+    .board-num { text-align:center; font-size:12px;
+        padding-top:20px;
+    }
+}
