--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -60,7 +60,7 @@
 .pf-txt p:last-child { line-height:1.7; }
 .pf-txt p:last-child span { font-size: 16px; 
     font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 400 ;
+    font-weight: 400 ; line-height: 1.9;
 }
 .pf-txt a { text-decoration: underline; }
 
